2008-05-26  higepon  <higepon@users.sourceforge.jp>

        * read.cpp (Scm_StringToNumber): Fixed the bug for '... .
                                         strtol accept "..." and returns 0.

        * freeproc.cpp (scheme::macroexpandEx): Added macroexpand procedure.

2008-05-24  higepon  <higepon@users.sourceforge.jp>

        * match.scm: Added Andrew Wright's match.

        * library.scm : Added (list? obj) procedure.

        * library.scm (string-ref): Added (string-ref s k) procedure.

2008-05-23  higepon  <higepon@users.sourceforge.jp>

        * Added div procedure and some tests.

        * Fixed the bug of mod procedure and added some tests. (thx leque)

2008-05-22  higepon  <higepon@users.sourceforge.jp>

        * Added (exit) procedure.

        * Added profiler.
          With -p option, you can enable profiler.

2008-05-21  higepon  <higepon@users.sourceforge.jp>

        * library.scm (vector-for-each): Added (vector-for-each ...), Added (hash-table-for-each ...).

        * freeproc.cpp (scheme::hashTableKeysEx): Adde (hash-table-keys ...)

        * macro.scm: Removed macro.scm.

        * vm.scm: Added pre-compiled macro support.
                  Only for top level macro defined at library.scm.
2008-05-19  higepon  <higepon@users.sourceforge.jp>

        * 0.0.3 released.

        * library.scm : Added for-all.

        * library.scm (even?): Added even? defined at Base Library.

        * freeproc.cpp : Added modulo procedure (mod a b).

        * VM.cpp : Added division support for Integer(Fixnum).

        * freeproc.cpp (scheme::applyEx): Fixed apply bug.

2008-05-18  higepon  <higepon@users.sourceforge.jp>

        * Added typed-vector for R6RS Record base.

        * TypedVector.h : Added.

2008-05-17  higepon  <higepon@users.sourceforge.jp>

        * freeproc.cpp (scheme::raiseContinuableEx): Added (raise-continuable ...).

        * scripts/gen-test.scm (print-test): Added mosh-only syntax, it is used for tests only for mosh.
