@@ -45,31 +45,6 @@
 (define-macro (define-doc . more)
   `())
 
-(define-macro (do . sexp)
-  (match `(do ,@sexp)
-    [('do ((var init step ...) ...)
-         (test expr ...)
-       command ...)
-     `(letrec
-       ((loop
-         (lambda (,@var)
-           (if ,test
-               (begin
-                 #f ; avoid empty begin
-                 ,@expr)
-               (begin
-                 ,@command
-                 (loop ,@(map (lambda (v s) `(do "step" ,v ,@s)) var step)))))))
-        (loop ,@init))]
-    [('do "step" x)
-     x]
-    [('do "step" x y)
-     y]
-    [else
-     (error "malformed do")]))
-
-
-
 ; ==============================================================================================================================================================
 ;;; Base library.
 ;;; R6RS chapter 11.
